# minibash

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: builtins.h  common.h  environment.h  executor.h  history.h  jobs.h  lexer.h  parser.h  shell.h
scripts/: minibashrc.example
src/: builtins.cpp  environment.cpp  executor.cpp  history.cpp  jobs.cpp  lexer.cpp  main.cpp  parser.cpp  shell.cpp
tests/: test_main.cpp
